re-attempted problems 9,15 after auto-grader failure

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -879,7 +879,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 229,
       "metadata": {
         "id": "peDdc6qhZRww"
       },
@@ -895,7 +895,9 @@
         "        # make an empty list for the rows, and append the rows into it \n",
         "        q9_list = []\n",
         "\n",
+        "        # add in a list comprehension to convert to floats here\n",
         "        for q9row in q9reader:\n",
+        "            q9row = [float(x) for x in q9row]\n",
         "            q9_list.append(q9row)\n",
         "                \n",
         "    # change to a float and return the array\n",
@@ -939,7 +941,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# attempt 3 - failed autograder\n",
+        "# def p9(filename):\n",
+        "#     # open file with csv reader\n",
+        "#     with open (filename) as f9:\n",
+        "#         q9reader = csv.reader(f9, delimiter=\"\\t\")\n",
+        "\n",
+        "#         # make an empty list for the rows, and append the rows into it \n",
+        "#         q9_list = []\n",
+        "\n",
+        "#         for q9row in q9reader:\n",
+        "#             q9_list.append(q9row)\n",
+        "                \n",
+        "#     # change to a float and return the array\n",
+        "#     return np.array(q9_list, dtype=float)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 230,
       "metadata": {},
       "outputs": [
         {
@@ -950,7 +974,7 @@
               "       [ 1.06096693,  1.10477129,  0.83694374]])"
             ]
           },
-          "execution_count": 164,
+          "execution_count": 230,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1421,7 +1445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 186,
+      "execution_count": 231,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1431,7 +1455,7 @@
         "    # first round, using a fstring automatically converts it to a string\n",
         "    q15_float = f\"{v:.2f}\"\n",
         "    # combine the elements\n",
-        "    q15_string = (\"The answer is \" + q15_float + \" elephants\")\n",
+        "    q15_string = (\"The answer is \" + q15_float + \" elephants.\")\n",
         "    return q15_string"
       ]
     },
@@ -1450,16 +1474,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 188,
+      "execution_count": 232,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "'The answer is 42.34 elephants'"
+              "'The answer is 42.34 elephants.'"
             ]
           },
-          "execution_count": 188,
+          "execution_count": 232,
           "metadata": {},
           "output_type": "execute_result"
         }
