re-attempt at #9

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -879,7 +879,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 229,
+      "execution_count": 236,
       "metadata": {
         "id": "peDdc6qhZRww"
       },
@@ -895,8 +895,12 @@
         "        # make an empty list for the rows, and append the rows into it \n",
         "        q9_list = []\n",
         "\n",
+        "\n",
         "        # add in a list comprehension to convert to floats here\n",
         "        for q9row in q9reader:\n",
+        "            # add a check to skip blank lines\n",
+        "            if not q9row:\n",
+        "                continue\n",
         "            q9row = [float(x) for x in q9row]\n",
         "            q9_list.append(q9row)\n",
         "                \n",
