another attempt at getting  right

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -879,7 +879,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 239,
+      "execution_count": 241,
       "metadata": {
         "id": "peDdc6qhZRww"
       },
@@ -902,14 +902,10 @@
         "            if not q9row or all(cell.strip() == '' for cell in q9row):\n",
         "                continue\n",
         "            q9row = [float(x) for x in q9row]\n",
-        "            q9_list.append(q9row)\n",
+        "            q9_list.extend(q9row)\n",
         "                \n",
         "    # change to a float and return the array\n",
-        "    # also flattening the shape so maybe the autograder will be happy?\n",
-        "    q9array = np.array(q9_list, dtype=float)\n",
-        "    if q9array.shape[0] == 1:\n",
-        "        q9array = q9array.flatten()\n",
-        "    return q9array"
+        "    return np.array(q9_list, dtype=float)"
       ]
     },
     {
@@ -971,18 +967,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 240,
+      "execution_count": 242,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "array([[ 1.        ,  2.        ,  3.        ],\n",
-              "       [ 1.54835263, -0.1351898 , -1.40723313],\n",
-              "       [ 1.06096693,  1.10477129,  0.83694374]])"
+              "array([ 1.        ,  2.        ,  3.        ,  1.54835263, -0.1351898 ,\n",
+              "       -1.40723313,  1.06096693,  1.10477129,  0.83694374])"
             ]
           },
-          "execution_count": 240,
+          "execution_count": 242,
           "metadata": {},
           "output_type": "execute_result"
         }
