another attempt at 9....

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -879,7 +879,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 241,
+      "execution_count": 246,
       "metadata": {
         "id": "peDdc6qhZRww"
       },
@@ -891,21 +891,10 @@
         "    # open file with csv reader\n",
         "    with open (filename) as f9:\n",
         "        q9reader = csv.reader(f9, delimiter=\"\\t\")\n",
-        "\n",
-        "        # make an empty list for the rows, and append the rows into it \n",
-        "        q9_list = []\n",
-        "\n",
-        "\n",
-        "        # add in a list comprehension to convert to floats here\n",
         "        for q9row in q9reader:\n",
-        "            # add a check to skip blank lines\n",
         "            if not q9row or all(cell.strip() == '' for cell in q9row):\n",
         "                continue\n",
-        "            q9row = [float(x) for x in q9row]\n",
-        "            q9_list.extend(q9row)\n",
-        "                \n",
-        "    # change to a float and return the array\n",
-        "    return np.array(q9_list, dtype=float)"
+        "        return np.array([float(x) for x in q9row], dtype=float)"
       ]
     },
     {
@@ -967,17 +956,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 242,
+      "execution_count": 247,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "array([ 1.        ,  2.        ,  3.        ,  1.54835263, -0.1351898 ,\n",
-              "       -1.40723313,  1.06096693,  1.10477129,  0.83694374])"
+              "array([1.06096693, 1.10477129, 0.83694374])"
             ]
           },
-          "execution_count": 242,
+          "execution_count": 247,
           "metadata": {},
           "output_type": "execute_result"
         }
